--- a/acompanhamento.html
+++ b/acompanhamento.html
@@ -31,6 +31,10 @@
                   <li class="nav-item">
                       <a class="nav-link" href="https://pbi.doanalytics.com.br/">Sistema BI Conti</a>
                   </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comodato.html">Comodato</a>
+                </li>
               </ul>
           </div>
       </div>
