--- a/comodato.html
+++ b/comodato.html
@@ -10,6 +10,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+            <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #156FF5;">
+
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="Imagens/logoConti.jpg" alt="CASA DI CONTI" style="width:200px;" class="rounded-pill"> 
+            </a>
+  
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Levantamento</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="acompanhamento.html">Calcular mix médio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://pbi.doanalytics.com.br/">Sistema BI Conti</a>
+                    </li>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="comodato.html">Comodato</a>
+                  </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  
+      <script src="https://cdn.jsdelivr.net/npm/date-fns@2.30.0/dist/date-fns.min.js"></script>
+
+      
     <div class="container mt-5">
         <h1 class="mb-4">Clientes com Vasilhames Emprestados</h1>
 
