--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://pbi.doanalytics.com.br/">Sistema BI Conti</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="comodato.html">Comodato</a>
+                    </li>
                 </ul>
             </div>
         </div>
