--- a/comodato.html
+++ b/comodato.html
@@ -7,7 +7,9 @@
     <!-- Adicionando Bootstrap e FontAwesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleIndex.css">
+    <link rel="icon" type="image/x-icon" href="/Imagens/logoMarcas144x144.png">
+    
 </head>
 <body>
 
@@ -88,7 +90,7 @@
         </table>
     </div>
 
-    <script src="script.js"></script>
+    <script src="comodato.js"></script>
     <!-- Adicionando o JS do Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
